kubernetes/apps/ghostfolio/ghostfolio/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghostfolio
  namespace: ghostfolio
  labels:
    app: ghostfolio
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ghostfolio
  template:
    metadata:
      labels:
        app: ghostfolio
    spec:
      restartPolicy: Always
      containers:
        - name: ghostfolio
          image: ghostfolio/ghostfolio:2.174.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3333
              name: http
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 500m
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
