kubernetes/apps/ghostfolio/ghostfolio/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio
  namespace: ghostfolio
  labels:
    app: ghostfolio
spec:
  type: ClusterIP
  selector:
    app: ghostfolio
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
