kubernetes/apps/ghostfolio/ghostfolio/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghostfolio
  namespace: ghostfolio
spec:
  hostnames:
    - ghostfolio.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ghostfolio
          namespace: ghostfolio
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
